# Noob_Vulkan_Engine

./: CMakeLists.txt  firstApp.cpp  firstApp.hpp  main.cpp  nvePipeline.cpp  nvePipeline.hpp  nveWindow.cpp  nveWindow.hpp
shaders/: compile.bat  simpleShader.vert  simpleVert.spv
